substrate/frame/support/test/tests/pallet_ui/genesis_wrong_name.stderr
error: Invalid pallet::genesis_build, expected impl<..> GenesisBuild<..> for GenesisConfig<..>
  --> tests/pallet_ui/genesis_wrong_name.rs:36:2
   |
36 |     impl Foo {}
   |     ^^^^
